oops, changed wrong background image filepath on homepage, corrected here

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -788,7 +788,7 @@ ul {
 
   .three {
     position: relative;
-    background: url('./images/monarch_bg.jpg.jpg');
+    background: url('./images/green-background-hero.jpg');
     background-size: cover;
     padding: 200px 0;
 
@@ -979,7 +979,7 @@ ul {
   } // END .homepage .five
 
   .six {
-    background: url('./images/green-background-hero.jpg');
+    background: url('./images/monarch_bg.jpg');
     background-size: cover;
     padding: 100px 0;
 
